kubernetes/apps/network/envoy-gateway/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-internal
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/managed-by: envoy-gateway
    egress:
      - toEntities:
          - cluster
      - toEndpoints:
          - {}
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: gateway-helm
    egress:
      - toFQDNs:
          - matchName: ghcr.io
          - matchName: pkg-containers.githubusercontent.com
        toPorts:
          - ports:
              - port: "443"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: envoy-egress-label
specs:
  - endpointSelector:
      matchLabels:
        egress.cilium.io/envoy-http: "true"
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: envoy
        toPorts:
          - ports:
              - port: "10080"
              - port: "10443"
      # via envoy, when pods use ${ROOT_DOMAIN}
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: network
              gateway.envoyproxy.io/owning-gateway-name: envoy-internal
        toPorts:
          - ports:
              - port: "10443"
  - endpointSelector:
      matchLabels:
        egress.cilium.io/envoy-tcp: "true"
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: envoy
      # via envoy, when pods use ${ROOT_DOMAIN}
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: network
              gateway.envoyproxy.io/owning-gateway-name: envoy-internal
